syntax = "proto3";

package io.eigr.spawn.example;

option java_package = "io.eigr.spawn.example";

message MyBussinessMessage {
  int32 value = 1;
}